force-app/main/default/objects/WOD_Workout_Movements__c/WOD_Workout_Movements__c.object-meta.xml
<CustomObject>
    <description>Junction object to Connect Daily Workouts &amp; Movements (Mirrors Opportunity Products)</description>
    <label>Workout Movements</label>
    <nameField>
        <displayFormat>WM-{00000000}</displayFormat>
        <label>Workout Movements Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workout Movements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>