force-app/main/default/objects/WOD_Workout_Movements__c/fields/Daily_Workout__c.field-meta.xml
<CustomField>
    <fullName>Daily_Workout__c</fullName>
    <label>Daily Workout</label>
    <referenceTo>WOD_Daily_Workout__c</referenceTo>
    <relationshipLabel>Workout Movements</relationshipLabel>
    <relationshipName>Workout_Movements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>