force-app/main/default/objects/WOD_Workout_Movements__c/fields/Movements__c.field-meta.xml
<CustomField>
    <fullName>Movements__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Movements</label>
    <referenceTo>WOD_Movements__c</referenceTo>
    <relationshipLabel>Workout Movements</relationshipLabel>
    <relationshipName>Workout_Movements</relationshipName>
    <type>Lookup</type>
</CustomField>