force-app/main/default/objects/WOD_Workout_Movements__c/fields/Previous_Value__c.field-meta.xml
<CustomField>
    <fullName>Previous_Value__c</fullName>
    <description>Original entered value when meters or seconds are recalculated</description>
    <label>Previous Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>