force-app/main/default/objects/WOD_Workout_Movements__c/fields/Total_Reps__c.field-meta.xml
<CustomField>
    <fullName>Total_Reps__c</fullName>
    <label>Total Reps</label>
    <precision>8</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>