force-app/main/default/objects/WOD_Workout_Movements__c/fields/Weight_Lbs__c.field-meta.xml
<CustomField>
    <fullName>Weight_Lbs__c</fullName>
    <label>Weight (Lbs)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>