force-app/main/default/objects/WOD_Workout_Movements__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Daily_Workout__c</columns>
    <columns>Movements__c</columns>
    <columns>Total_Reps__c</columns>
    <columns>Weight_Lbs__c</columns>
    <columns>Total_Weight__c</columns>
    <columns>Previous_Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>