force-app/main/default/objects/WOD_Workout_Movements__c/listViews/WOD_Rowing_List.listView-meta.xml
<ListView>
    <fullName>WOD_Rowing_List</fullName>
    <columns>Daily_Workout__c</columns>
    <columns>Movements__c</columns>
    <columns>Total_Reps__c</columns>
    <columns>Weight_Lbs__c</columns>
    <columns>Total_Weight__c</columns>
    <columns>Previous_Value__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Movements__c</field>
        <operation>startsWith</operation>
        <value>Row</value>
    </filters>
    <label>Rowing List</label>
</ListView>